--- a/TestApps/App1/App1.vcxproj
+++ b/TestApps/App1/App1.vcxproj
@@ -93,7 +93,7 @@
     <ClCompile Include="App1.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\GeneticLibrary2.vcxproj">
+    <ProjectReference Include="..\..\GALex.vcxproj">
       <Project>{55d67b0e-145c-4cdd-bc27-0de87a86d821}</Project>
     </ProjectReference>
     <ProjectReference Include="..\..\Problems\Problems.vcxproj">
