bpp project ref. fix

--- a/Problems/Problems.vcxproj.filters
+++ b/Problems/Problems.vcxproj.filters
@@ -27,6 +27,7 @@
     <ClInclude Include="BPP.h">
       <Filter>BPP</Filter>
     </ClInclude>
+    <ClInclude Include="CSP.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="F1.cpp">
