--- a/Problems/Problems.vcxproj
+++ b/Problems/Problems.vcxproj
@@ -18,6 +18,7 @@
     <ClInclude Include="XKCD.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BPP.cpp" />
     <ClCompile Include="F1.cpp" />
     <ClCompile Include="TNG.cpp" />
     <ClCompile Include="XKCD.cpp" />
