--- a/TestApps/App11/App11.vcxproj
+++ b/TestApps/App11/App11.vcxproj
@@ -21,7 +21,7 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v110</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
-    <UseOfMfc>Static</UseOfMfc>
+    <UseOfMfc>Dynamic</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -29,7 +29,7 @@
     <PlatformToolset>v110</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
-    <UseOfMfc>Static</UseOfMfc>
+    <UseOfMfc>Dynamic</UseOfMfc>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -53,7 +53,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -77,7 +77,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -104,6 +104,7 @@
   <ItemGroup>
     <ClInclude Include="App11.h" />
     <ClInclude Include="ChildView.h" />
+    <ClInclude Include="CSPAlgorithm.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="NewTestDlg.h" />
     <ClInclude Include="Resource.h" />
@@ -113,6 +114,7 @@
   <ItemGroup>
     <ClCompile Include="App11.cpp" />
     <ClCompile Include="ChildView.cpp" />
+    <ClCompile Include="CSPAlgorithm.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="NewTestDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -128,6 +130,14 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\App11.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\GALex.vcxproj">
+      <Project>{55d67b0e-145c-4cdd-bc27-0de87a86d821}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Problems\Problems.vcxproj">
+      <Project>{93560795-9abc-4748-a161-f9166987b4d4}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
